script of start